--- a/roles/template/defaults/main.yml
+++ b/roles/template/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-template_dir: "../kubemanifests/{{ inventory_hostname }}/generated"
+template_dir: "{{ (playbook_dir, '..', 'kubemanifests', inventory_hostname, 'generated') | path_join }}"
 template_empty: false
