--- a/galaxy.yml
+++ b/galaxy.yml
@@ -8,13 +8,13 @@ name: "kubemanifests"
 version: 1.0.0
 readme: README.md
 authors:
-  - your name <example@domain.com>
+  - Homero Pawlowski <hpawlows@redhat.com>
 
-description: your collection description
+description: A collection containing roles that help to create, deploy, and manage k8s resources associated with a Red Hat Ansible Automation Platform Operator installation.
 license_file: LICENSE
 
 # TO-DO: update the tags based on your content type
-tags: ["linux", "tools"]
+tags: ["openshift", "aap", "operator"]
 
 # TO-DO: maintain this list to reflect the collection's dependencies
 dependencies:
