--- a/roles/template/tasks/main.yml
+++ b/roles/template/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- when: ansibleautomationplatform is defined or automationcontroller is defined or automationhub is defined or eda is defined # noqa name[missing]
+- when: ansibleautomationplatform is defined or automationcontroller is defined or automationhub is defined or eda is defined or secrets is defined # noqa name[missing] yaml[line-length]
   block:
     - name: Empty directory, if exists
       ansible.builtin.file:
@@ -13,24 +13,47 @@
         path: "{{ template_dir }}"
         state: directory
 
+- when: ansibleautomationplatform is defined or automationcontroller is defined or automationhub is defined or eda is defined # noqa name[missing]
+  block:
+    - name: Create directory
+      ansible.builtin.file:
+        mode: '0775'
+        path: "{{ template_dir }}/crs"
+        state: directory
+
+- when: secrets is defined # noqa name[missing]
+  block:
+    - name: Create directory
+      ansible.builtin.file:
+        mode: '0775'
+        path: "{{ template_dir }}/secrets"
+        state: directory
+
 - name: Template ansibleautomationplatform.yml
   ansible.builtin.copy:
     content: "{{ lookup('ansible.builtin.template', 'templates/ansibleautomationplatform.yml.j2') | from_yaml | combine(ansibleautomationplatform, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
-    dest: "{{ template_dir }}/ansibleautomationplatform.yml"
+    dest: "{{ template_dir }}/crs/ansibleautomationplatform.yml"
     mode: '0644'
   when: ansibleautomationplatform is defined and ansibleautomationplatform
 
 - name: Template automationcontroller.yml
   ansible.builtin.copy:
     content: "{{ lookup('ansible.builtin.template', 'templates/automationcontroller.yml.j2') | from_yaml | combine(automationcontroller, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
-    dest: "{{ template_dir }}/automationcontroller.yml"
+    dest: "{{ template_dir }}/crs/automationcontroller.yml"
     mode: '0644'
   when: automationcontroller is defined and automationcontroller
+
+- name: Template automationhub.yml
+  ansible.builtin.copy:
+    content: "{{ lookup('ansible.builtin.template', 'templates/automationhub.yml.j2') | from_yaml | combine(automationhub, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
+    dest: "{{ template_dir }}/crs/automationhub.yml"
+    mode: '0644'
+  when: automationhub is defined and automationhub
 
 - name: Template secrets
   ansible.builtin.copy:
     content: "{{ lookup('ansible.builtin.template', 'templates/secret.yml.j2') | from_yaml | to_nice_yaml(2) }}"
-    dest: "{{ template_dir }}/{{ item.name }}.yml"
+    dest: "{{ template_dir }}/secrets/{{ item.name }}.yml"
     mode: '0644'
   loop: "{{ secrets }}"
   when: secrets is defined
