--- a/inventory/host_vars/aap-24-dev.example.com/ocp-config.yml
+++ b/inventory/host_vars/aap-24-dev.example.com/ocp-config.yml
@@ -1,16 +1,24 @@
 ---
 namespace: aap-24-dev
 name_gateway: ""
-name_controller: aap-24-dev
+name_controller: controller-dev
 name_eda: ""
-name_hub: ""
+name_hub: hub-dev
 
 automationcontroller:
   spec:
     admin_password_secret: "{{ name_controller }}-admin-password"
-    route_host: aap-24-dev.example.com
+    route_host: controller-dev.example.com
+
+  spec:
+    admin_password_secret: "{{ name_hub }}-admin-password"
+    route_host: hub-dev.example.com
 
 secrets:
   - name: "{{ name_controller }}-admin-password"
     data:
       password: foobar
+
+  - name: "{{ name_hub }}-admin-password"
+    data:
+      password: foobar2
