Refactor to aap.platform_on_ocp

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,5 +1,5 @@
 [settings]
-known_first_party=ansible_collections.escwq.kubemanifests
+known_first_party=ansible_collections.aap.platform_on_ocp
 line_length=100
 lines_after_imports=2
 lines_between_types=1
