--- a/devfile.yaml
+++ b/devfile.yaml
@@ -1,6 +1,6 @@
 schemaVersion: 2.2.2
 metadata:
-  name: escwq.kubemanifests-04fbec75
+  name: aap.platform_on_ocp-04fbec75
 components:
   - name: tooling-container
     container:
