--- a/tests/integration/targets/hello_world/tasks/main.yml
+++ b/tests/integration/targets/hello_world/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: Test the Hello World filter plugin
   ansible.builtin.set_fact:
-    msg: "{{ 'ansible-creator' | escwq.kubemanifests.hello_world }}"
+    msg: "{{ 'ansible-creator' | aap.platform_on_ocp.hello_world }}"
 
 - name: Assert that the filter worked
   ansible.builtin.assert:
