--- a/roles/generate_kubemanifests/defaults/main.yml
+++ b/roles/generate_kubemanifests/defaults/main.yml
@@ -1,3 +1,3 @@
 ---
-template_dir: "{{ (playbook_dir, '..', 'kubemanifests', inventory_hostname, 'generated') | path_join }}"
-template_empty: false
+generate_kubemanifests_template_dir: "{{ (playbook_dir, '..', 'kubemanifests', inventory_hostname, 'generated') | path_join }}"
+generate_kubemanifests_template_empty: false
