--- a/roles/generate_kubemanifests/tasks/main.yml
+++ b/roles/generate_kubemanifests/tasks/main.yml
@@ -1,66 +1,106 @@
 ---
-- when: ansibleautomationplatform is defined or automationcontroller is defined or automationhub is defined or eda is defined or secrets is defined # noqa name[missing] yaml[line-length]
+- name: Handle the directory creation and/or cleanup
+  when: >
+    ansibleautomationplatform is defined or
+    automationcontroller is defined or
+    automationhub is defined or
+    eda is defined or secrets is defined
   block:
-    - name: Empty directory, if exists
+    - name: Empty the generated templates directory, if it exists
       ansible.builtin.file:
-        path: "{{ template_dir }}"
+        path: "{{ generate_kubemanifests_template_dir }}"
         state: absent
-      when: template_empty | bool
+      when: generate_kubemanifests_template_empty | bool
 
-    - name: Create directory
+    - name: Create the generated templates directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ template_dir }}"
+        path: "{{ generate_kubemanifests_template_dir }}"
         state: directory
 
-- when: ansibleautomationplatform is defined or automationcontroller is defined or automationhub is defined or eda is defined # noqa name[missing]
+- name: Handle the crs directory creation
+  when: >
+    ansibleautomationplatform is defined or
+    automationcontroller is defined or
+    automationhub is defined or
+    eda is defined
   block:
-    - name: Create directory
+    - name: Create the generated crs directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ template_dir }}/crs"
+        path: "{{ generate_kubemanifests_template_dir }}/crs"
         state: directory
 
-- when: secrets is defined # noqa name[missing]
+- name: Handle the secrets directory creation
+  when: secrets is defined and secrets
   block:
-    - name: Create directory
+    - name: Create the generated secrets directory
       ansible.builtin.file:
         mode: '0775'
-        path: "{{ template_dir }}/secrets"
+        path: "{{ generate_kubemanifests_template_dir }}/secrets"
         state: directory
 
 - name: Template ansibleautomationplatform.yml
   ansible.builtin.copy:
-    content: "{{ lookup('ansible.builtin.template', 'templates/ansibleautomationplatform.yml.j2') | from_yaml | combine(ansibleautomationplatform, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
-    dest: "{{ template_dir }}/crs/ansibleautomationplatform.yml"
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/ansibleautomationplatform.yml.j2') |
+        from_yaml |
+        combine(ansibleautomationplatform, recursive=true) |
+        to_nice_yaml(2)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/crs/ansibleautomationplatform.yml"
     mode: '0644'
   when: ansibleautomationplatform is defined and ansibleautomationplatform
 
 - name: Template automationcontroller.yml
   ansible.builtin.copy:
-    content: "{{ lookup('ansible.builtin.template', 'templates/automationcontroller.yml.j2') | from_yaml | combine(automationcontroller, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
-    dest: "{{ template_dir }}/crs/automationcontroller.yml"
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/automationcontroller.yml.j2') |
+        from_yaml |
+        combine(automationcontroller, recursive=true) |
+        to_nice_yaml(2)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/crs/automationcontroller.yml"
     mode: '0644'
   when: automationcontroller is defined and automationcontroller
 
 - name: Template automationhub.yml
   ansible.builtin.copy:
-    content: "{{ lookup('ansible.builtin.template', 'templates/automationhub.yml.j2') | from_yaml | combine(automationhub, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
-    dest: "{{ template_dir }}/crs/automationhub.yml"
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/automationhub.yml.j2') |
+        from_yaml |
+        combine(automationhub, recursive=true) |
+        to_nice_yaml(2)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/crs/automationhub.yml"
     mode: '0644'
   when: automationhub is defined and automationhub
 
-- name: Template EDA.yml
+- name: Template eda.yml
   ansible.builtin.copy:
-    content: "{{ lookup('ansible.builtin.template', 'templates/eda.yml.j2') | from_yaml | combine(eda, recursive=true) | to_nice_yaml(2) }}" # noqa yaml[line-length]
-    dest: "{{ template_dir }}/crs/eda.yml"
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/eda.yml.j2') |
+        from_yaml |
+        combine(eda, recursive=true) |
+        to_nice_yaml(2)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/crs/eda.yml"
     mode: '0644'
   when: eda is defined and eda
 
 - name: Template secrets
   ansible.builtin.copy:
-    content: "{{ lookup('ansible.builtin.template', 'templates/secret.yml.j2') | from_yaml | to_nice_yaml(2) }}"
-    dest: "{{ template_dir }}/secrets/{{ item.name }}.yml"
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/secret.yml.j2') |
+        from_yaml |
+        to_nice_yaml(2)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/secrets/{{ item.name }}.yml"
     mode: '0644'
   loop: "{{ secrets }}"
-  when: secrets is defined
+  when: secrets is defined and secrets
