--- a/roles/generate_kubemanifests/tasks/main.yml
+++ b/roles/generate_kubemanifests/tasks/main.yml
@@ -4,7 +4,9 @@
     ansibleautomationplatform is defined or
     automationcontroller is defined or
     automationhub is defined or
-    eda is defined or secrets is defined
+    eda is defined or
+    secrets is defined or
+    configmaps is defined
   block:
     - name: Empty the generated templates directory, if it exists
       ansible.builtin.file:
@@ -29,6 +31,15 @@
       ansible.builtin.file:
         mode: '0775'
         path: "{{ generate_kubemanifests_template_dir }}/crs"
+        state: directory
+
+- name: Handle the configmaps directory creation
+  when: configmaps is defined and configmaps
+  block:
+    - name: Create the generated configmaps directory
+      ansible.builtin.file:
+        mode: '0775'
+        path: "{{ generate_kubemanifests_template_dir }}/configmaps"
         state: directory
 
 - name: Handle the secrets directory creation
@@ -92,13 +103,26 @@
     mode: '0644'
   when: eda is defined and eda
 
+- name: Template configmaps
+  ansible.builtin.copy:
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/configmap.yml.j2') |
+        from_yaml |
+        to_nice_yaml(indent=2, sort_keys=false)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/configmaps/{{ item.name }}.yml"
+    mode: '0644'
+  loop: "{{ configmaps }}"
+  when: configmaps is defined and configmaps
+
 - name: Template secrets
   ansible.builtin.copy:
     content: >
       {{
         lookup('ansible.builtin.template', 'templates/secret.yml.j2') |
         from_yaml |
-        to_nice_yaml(2)
+        to_nice_yaml(indent=2, sort_keys=false)
       }}
     dest: "{{ generate_kubemanifests_template_dir }}/secrets/{{ item.name }}.yml"
     mode: '0644'
