Add up checks for CRs

--- a/roles/manage_kubemanifests/defaults/main.yml
+++ b/roles/manage_kubemanifests/defaults/main.yml
@@ -1,3 +1,4 @@
 ---
 manage_kubemanifests_template_dir: "{{ (playbook_dir, '..', 'kubemanifests', inventory_hostname, 'generated') | path_join }}"
 manage_kubemanifests_state: present
+manage_kubemanifests_validate_certs: true
