--- a/roles/manage_kubemanifests/tasks/manage_eda.yml
+++ b/roles/manage_kubemanifests/tasks/manage_eda.yml
@@ -13,4 +13,4 @@
   until: _result.status == 200
   retries: 40
   delay: 15
-  when: not name_gateway or name_gateway == ""
+  when: (not name_gateway or name_gateway == "") and state == 'present'
