--- a/roles/generate_kubemanifests/tasks/main.yml
+++ b/roles/generate_kubemanifests/tasks/main.yml
@@ -60,6 +60,15 @@
         path: "{{ generate_kubemanifests_template_dir }}/subscriptions"
         state: directory
 
+- name: Handle the operatorgroups directory creation
+  when: operatorgroups is defined and operatorgroups
+  block:
+    - name: Create the generated operatorgroups directory
+      ansible.builtin.file:
+        mode: '0775'
+        path: "{{ generate_kubemanifests_template_dir }}/operatorgroups"
+        state: directory
+
 - name: Handle the pvcs directory creation
   when: pvcs is defined and pvcs
   block:
@@ -174,3 +183,17 @@
     mode: '0644'
   loop: "{{ subscriptions }}"
   when: subscriptions is defined and subscriptions
+
+- name: Template operatorgroups
+  ansible.builtin.copy:
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/operatorgroup.yml.j2') |
+        from_yaml |
+        combine(item | ansible.utils.remove_keys(target=['name', 'namespace']), recursive=true) |
+        to_nice_yaml(indent=2, sort_keys=false)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/operatorgroups/{{ item.name }}.yml"
+    mode: '0644'
+  loop: "{{ operatorgroups }}"
+  when: operatorgroups is defined and operatorgroups
