--- a/inventory/host_vars/aap-25.example.com/ocp-config.yml
+++ b/inventory/host_vars/aap-25.example.com/ocp-config.yml
@@ -43,14 +43,16 @@ eda:
       database_secret: "{{ name_eda }}-postgres-configuration"
 
 pvcs:
-  - name: "{{ name_controller }}-projects"
+  - metadata:
+      name: "{{ name_controller }}-projects"
     spec:
       resources:
         requests:
           storage: 2000m
 
 secrets:
-  - name: "{{ name_gateway }}-postgres-configuration"
+  - metadata:
+      name: "{{ name_gateway }}-postgres-configuration"
     data:
       host: 127.0.0.1
       port: 5415
@@ -60,7 +62,8 @@ secrets:
       sslmode: prefer
       type: unmanaged
 
-  - name: "{{ name_controller }}-postgres-configuration"
+  - metadata:
+      name: "{{ name_controller }}-postgres-configuration"
     data:
       host: 127.0.0.1
       port: 5415
@@ -70,7 +73,8 @@ secrets:
       sslmode: prefer
       type: unmanaged
 
-  - name: "{{ name_hub }}-postgres-configuration"
+  - metadata:
+      name: "{{ name_hub }}-postgres-configuration"
     data:
       host: 127.0.0.1
       port: 5415
@@ -80,7 +84,8 @@ secrets:
       sslmode: prefer
       type: unmanaged
 
-  - name: "{{ name_eda }}-postgres-configuration"
+  - metadata:
+      name: "{{ name_eda }}-postgres-configuration"
     data:
       host: 127.0.0.1
       port: 5415
@@ -90,18 +95,22 @@ secrets:
       sslmode: prefer
       type: unmanaged
 
-  - name: "{{ name_controller }}-admin-password"
+  - metadata:
+      name: "{{ name_controller }}-admin-password"
     data:
       password: foobar
 
-  - name: "{{ name_hub }}-admin-password"
+  - metadata:
+      name: "{{ name_hub }}-admin-password"
     data:
       password: foobar3
 
-  - name: "{{ name_controller }}-secret-key"
+  - metadata:
+      name: "{{ name_controller }}-secret-key"
     data:
       secret_key: encryptionkey
 
-  - name: "{{ name_eda }}-admin-password"
+  - metadata:
+      name: "{{ name_eda }}-admin-password"
     data:
       password: foobar2
