--- a/inventory/group_vars/ocp_cluster_1/operators.yml
+++ b/inventory/group_vars/ocp_cluster_1/operators.yml
@@ -1,12 +1,14 @@
 ---
 operatorgroups:
-  - name: ansible-automation-platform-operator
-    namespace: aap
+  - metadata:
+      name: ansible-automation-platform-operator
+      namespace: aap
     spec:
       targetNamespaces: []
 
 subscriptions:
-  - name: ansible-automation-platform-operator
-    namespace: aap
+  - metadata:
+      name: ansible-automation-platform-operator
+      namespace: aap
     spec:
       channel: stable-2.5-cluster-scoped
