--- a/inventory/host_vars/aap-24-prod.example.com/ocp-config.yml
+++ b/inventory/host_vars/aap-24-prod.example.com/ocp-config.yml
@@ -17,15 +17,18 @@ automationhub:
     route_host: aap-24-prod.example.com
 
 secrets:
-  - name: "{{ name_controller }}-admin-password"
+  - metadata:
+      name: "{{ name_controller }}-admin-password"
     data:
       password: foobar
 
-  - name: "{{ name_hub }}-admin-password"
+  - metadata:
+      name: "{{ name_hub }}-admin-password"
     data:
       password: foobar2
 
-  - name: "{{ name_hub }}-postgres-configuration"
+  - metadata:
+      name: "{{ name_hub }}-postgres-configuration"
     data:
       host: 127.0.0.1
       port: 5415
