--- a/roles/generate_kubemanifests/tasks/main.yml
+++ b/roles/generate_kubemanifests/tasks/main.yml
@@ -42,6 +42,15 @@
         path: "{{ generate_kubemanifests_template_dir }}/configmaps"
         state: directory
 
+- name: Handle the routes directory creation
+  when: routes is defined and routes
+  block:
+    - name: Create the generated routes directory
+      ansible.builtin.file:
+        mode: '0775'
+        path: "{{ generate_kubemanifests_template_dir }}/routes"
+        state: directory
+
 - name: Handle the secrets directory creation
   when: secrets is defined and secrets
   block:
@@ -138,7 +147,7 @@
         from_yaml |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/configmaps/{{ item.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_dir }}/configmaps/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ configmaps }}"
   when: configmaps is defined and configmaps
@@ -149,13 +158,27 @@
       {{
         lookup('ansible.builtin.template', 'templates/pvc.yml.j2') |
         from_yaml |
-        combine(item | ansible.utils.remove_keys(target=['name']), recursive=true) |
+        combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/pvcs/{{ item.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_dir }}/pvcs/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ pvcs }}"
   when: pvcs is defined and pvcs
+
+- name: Template routes
+  ansible.builtin.copy:
+    content: >
+      {{
+        lookup('ansible.builtin.template', 'templates/route.yml.j2') |
+        from_yaml |
+        combine(item, recursive=true) |
+        to_nice_yaml(indent=2, sort_keys=false)
+      }}
+    dest: "{{ generate_kubemanifests_template_dir }}/routes/{{ item.metadata.name }}.yml"
+    mode: '0644'
+  loop: "{{ routes }}"
+  when: routes is defined and routes
 
 - name: Template secrets
   ansible.builtin.copy:
@@ -165,7 +188,7 @@
         from_yaml |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/secrets/{{ item.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_dir }}/secrets/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ secrets }}"
   when: secrets is defined and secrets
@@ -176,10 +199,10 @@
       {{
         lookup('ansible.builtin.template', 'templates/subscription.yml.j2') |
         from_yaml |
-        combine(item | ansible.utils.remove_keys(target=['name', 'namespace']), recursive=true) |
+        combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/subscriptions/{{ item.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_dir }}/subscriptions/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ subscriptions }}"
   when: subscriptions is defined and subscriptions
@@ -190,10 +213,10 @@
       {{
         lookup('ansible.builtin.template', 'templates/operatorgroup.yml.j2') |
         from_yaml |
-        combine(item | ansible.utils.remove_keys(target=['name', 'namespace']), recursive=true) |
+        combine(item, recursive=true) |
         to_nice_yaml(indent=2, sort_keys=false)
       }}
-    dest: "{{ generate_kubemanifests_template_dir }}/operatorgroups/{{ item.name }}.yml"
+    dest: "{{ generate_kubemanifests_template_dir }}/operatorgroups/{{ item.metadata.name }}.yml"
     mode: '0644'
   loop: "{{ operatorgroups }}"
   when: operatorgroups is defined and operatorgroups
