Stop using state variable

--- a/roles/manage_kubemanifests/tasks/manage_kubemanifest.yml
+++ b/roles/manage_kubemanifests/tasks/manage_kubemanifest.yml
@@ -59,4 +59,4 @@
       manage_kubemanifests_object.kind | lower == 'automationhub' or
       manage_kubemanifests_object.kind | lower == 'eda'
     ) and
-    state == 'present'
+    manage_kubemanifests_state == 'present'
